css/eyewrite.css
:root {
  --outer-border: #BBB;
  --sub-box-padding: #FCFCFC;
  --title-text: #444;
  --button-border: #999999;
  --button-hover: #FFBF86;
  --button-hover-border: #E6A165;
  --button-text: #FFFFFF;
  --arrow-color: #FFFFFF;
}

/* html {
  height: 100%;
}

body {
  margin: 0;
  height: 100%;
} */

html {
	height: 100%;
	width: 100%;
	overflow-x: auto;
	overflow-y: hidden;
}

body {
	margin: 0;
	height: 100%;
	width: 100%;
	overflow-y: hidden;
	overflow-x: hidden;
}

/* Height / width / positioning can be customized for your use case.
   For demo purposes, we make the user list 175px and firepad fill the rest of the page. */
#userlist {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  height: auto;
  width: 175px;
}

.userlist-box {
  height: 200px;
  border-radius: 4px;
}

#firepad {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 175px;
  height: auto;
}

.arrow-up {
  width: 0;
  height: 0;
  border-left: 15px solid transparent;
  border-right: 15px solid transparent;
  border-bottom: 15px solid var(--arrow-color);
}

.arrow-down {
  width: 0;
  height: 0;
  border-left: 15px solid transparent;
  border-right: 15px solid transparent;
  border-top: 15px solid var(--arrow-color);
}

.arrow-stem {
  width: 10px;
  height: 15px;
  background: var(--arrow-color);
  margin-left: 10px;
}

.colorpicker-button {
  position: absolute;
  top: 0px;
  background-color: transparent;
  width: 30px;
  height: 30px;
  border: none;
  outline: none;
}

#color-edit-pencil-icon {
  position: relative;
  left: 6px;
  top: 7px;
  height: 20px;
  width: 20px;
}


#controlContainer {
  background-color: #EBEBEB;
  width: 175px;
  position: relative;
  border-radius: 4px;
  padding-bottom: 12px;
}

#user-checkboxes-container {
  position: relative;
  margin-left: 15px;
}

.user-checkboxes {
  background-color: var(--sub-box-padding);
  border: 1px solid var(--outer-border);
  border-bottom-width: 4px;
  border-radius: 6px;
  color: var(--title-text);
  display: inline-block;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 16px;
  font-weight: 500;
  margin-top: 10px;
  padding: 4px 6px 2px 6px;
  width: 145px;
}

.user-checkboxes:hover {
  background-color: var(--button-hover);
  border-color: var(--button-hover-border);
  color: var(--button-text);
}

#visualize-control-container {
  position: relative;
  margin-left: 15px;
}

.visualize-checkboxes {
  background-color: var(--sub-box-padding);
  border: 1px solid var(--outer-border);
  border-bottom-width: 4px;
  border-radius: 6px;
  color: var(--title-text);
  display: inline-block;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 16px;
  font-weight: 500;
  margin-top: 10px;
  padding: 4px 6px 2px 6px;
  width: 145px;
}

.visualize-checkboxes:hover {
  background-color: var(--button-hover);
  border-color: var(--button-hover-border);
  color: var(--button-text);
}

.radio-buttons {
  position: relative;
  width: 145px;
  margin-top: 10px;
  margin-left: 15px;
  background-color: var(--sub-box-padding);
  border: 1px solid var(--outer-border);
  border-radius: 4px;
}

.radio-buttons p {
  color: var(--title-text);
  margin-top: 5px;
  margin-left: 10px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 500;
  font-size: 16px;
}

.border {
  border: 1px solid black;
}

.radio-buttons input[type="radio"] {
  position: relative;
  opacity: 0;
  width: 0;
}

.radio-buttons label[type="radio"] {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 16px;
  font-weight: 400;
  display: inline-block;
  color: var(--button-text);
  border: 1px solid var(--button-border);
  border-radius: 6px;
  background-color: #C9C9C9;
  border-bottom-width: 4px;
  padding: 4px 6px 2px 6px;
  margin-left: 5px;
}

.radio-buttons label:hover {
  background-color: var(--button-hover);
  border-color: var(--button-hover-border);
}

.radio-buttons input[type="radio"]:checked+label {
  background-color: var(--button-border);
  border-color: var(--title-text);
}

.radio-buttons .inline-toggle-container {
  display: flex;
  justify-content: space-between;
}

.radio-buttons .inline-toggle-container p {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 14px;
}

.radio-buttons .inline-toggle-container #mute {
  width: 60px;
  height: 26px;
  margin-right: 5px;
  text-align: center;
  color: black;
}

.radio-buttons .inline-toggle-container #mute:disabled {
  width: 60px;
  height: 26px;
  margin-right: 5px;
  text-align: center;
  color: lightgray;
}

#slider-container {
  position: relative;
  left: 15px;
  width: 145px;
  height: 70px;
  margin-top: 10px;
  margin-bottom: 10px;
  background-color: var(--sub-box-padding);
  border: 1px solid var(--outer-border);
  border-radius: 4px;
  padding-bottom: 20px;
}

.slider-text {
  position: relative;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 500;
  font-size: 16px;
  margin-left: 10px;
  margin-top: 5px;
  padding-bottom: 0px;
  margin-bottom: 0px;
}

#sentenceSlider {
  position: relative;
  /* float: bottom; */
  width: 125px;
  margin-left: 10px;
  margin-top: 10px;
}

@media screen and (-webkit-min-device-pixel-ratio:0) {
  input[type='range'] {
    display: inline;
    overflow: hidden;
    border: 1px solid var(--title-text);
    -webkit-appearance: none;
    background-color: var(--sub-box-padding);
    outline: none;
    border-radius: 13px;
  }

  input[type='range']::-webkit-slider-runnable-track {
    height: 13px;
    -webkit-appearance: none;
    color: var(--button-hover-border);
  }

  input[type='range']::-webkit-slider-thumb {
    border-radius: 13px;
    width: 13px;
    -webkit-appearance: none;
    height: 13px;
    cursor: ew-resize;
    background: var(--button-hover-border);
    box-shadow: -80px 0 0 75px #C9C9C9;
  }
}

#calibrationLink {
  text-decoration: none;
  margin-left: 15px;
}

#calibrationButton {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 16px;
  font-weight: 500;
  color: var(--title-text);
  border: 1px solid var(--outer-border);
  border-radius: 6px;
  background-color: var(--sub-box-padding);
  border-bottom-width: 4px;
  padding: 4px 6px 2px 6px;
  position: relative;
  top: 2px;
  width: 145px;
  margin-top:8px;
}

#calibrationButton:hover {
  background-color: var(--button-hover);
  color: var(--button-text);
  border-color: var(--button-hover-border);
}

.onoffswitch {
  margin-right:5px;
  margin-left:5px;
  margin-bottom:10px;
  position: relative; width: 64px;
  -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
}
.onoffswitch-checkbox {
  position: absolute;
  opacity: 0;
  pointer-events: none;
}
.onoffswitch-label {
  display: block; overflow: hidden; cursor: pointer;
  border: 2px solid #FFFFFF; border-radius: 0px;
}
.onoffswitch-inner {
  display: block; width: 200%; margin-left: -100%;
  transition: margin 0.2s ease-in 0s;
}
.onoffswitch-inner:before, .onoffswitch-inner:after {
  display: block; float: left; width: 50%; height: 22px; padding: 0; line-height: 22px;
  font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
  box-sizing: border-box;
}
.onoffswitch-inner:before {
  content: "ON";
  padding-left: 10px;
  background-color: #EEEEEE; color: #444;
}
.onoffswitch-inner:after {
  content: "OFF";
  padding-right: 10px;
  background-color: #EEEEEE; color: #999999;
  text-align: right;
}
.onoffswitch-switch {
  display: block; width: 20px; height: 20px; margin: 3px;
  background: #A1A1A1;
  position: absolute; top: 0; bottom: 0;
  right: 38px;
  border: 2px solid #FFFFFF; border-radius: 0px;
  transition: all 0.2s ease-in 0s; 
}
.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
  margin-left: 0;
}
.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
  right: 0px; 
  background-color: #FFBF86; 
}



a.powered-by-firepad {
	display: none;
}

div.firepad-richtext.firepad-with-toolbar {
	height: 100%;
	/* min-width: 816px; */
}

/* div.CodeMirror-scroll {
	overflow-y: scroll;
} */

/* div.CodeMirror.cm-s-default.CodeMirror-wrap {
	overflow-y: scroll;
} */

div.CodeMirror-vscrollbar {
	/* width: 16px; */
	/* overflow: scroll; */
	width: 16px;
}

div.firepad-toolbar {
	/* /* width: 816px; */
	/* margin: 0 auto; */
	display: flex;
	align-items: center;
	/* left: calc((100vw / 2) - (816px / 2)); */
}

div.firepad-toolbar-wrapper {
	margin: 0 auto;
	/* padding: 20px; */
	min-width: 816px;
	width: 816px;
	display: flex;
	flex-direction: row;
	justify-content: center;
	/* border-style: solid;
	border-color: red;
	border-width: 1px; */
	padding: 0px 20px;
}

div.CodeMirror-lines {
	margin: 0 auto;

	/* border-style: solid;
	border-color: red;
	border-width: 1px; */
	width: 816px;
	min-height: 1000px;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	padding: 20px;
}

div.CodeMirror.cm-s-default.CodeMirror-wrap {
	/* overflow: scroll; */
	min-width: 816px;
}

/* div.CodeMirror-scroll {
	overflow: scroll;
} */

/* div.CodeMirror-vscrollbar {
	display: none;
} */

#controlContainer {
	position:absolute;
	width: 175px;
	left: 0;
	top: 0;
	height: 100%;
}

#userlist {
	/* height: auto; */
	width: 175px;
	padding-bottom: 10px;
}

#slider {
	width: 175px;
	height: 200px;
	display: flex;
	flex-direction: column;
}



#firepad {
	position: absolute;
	top: 0;
	left: 200px;
	right: 100px;
	height: 100vh;
	min-width: 916px;
	overflow: hidden;
	border-style: solid;
	border-width: 1px;
	border-color: lightgray;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	/* min-height: 100vh; */
}

